# opencv-pose

./: README.md  pyproject.toml
opencv-pose/: demo_persondet.py  demo_pose_estimation.py
