[tool.poetry]
name = "opencv-pose"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico@federicolanzani.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "~4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
